--- a/app/assets/stylesheets/pois.css
+++ b/app/assets/stylesheets/pois.css
@@ -223,9 +223,9 @@ ul#comments-list {
   li {
     padding-bottom: 6px;
     margin-bottom: 7px;
-    border-bottom: 1px solid #DDD;
-    border-left: 1px solid #DDD;
-    border-right: 1px solid #DDD;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
     display: block;
     p {
       margin: 0;
