--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,13 +1,11 @@
 <div class="row">
-  <div class="mbl city-select" style="width: 200px; display: inline-block; margin-left: 25px;">
-    <select id="city-select" class="select js-select" data-placeholder="Seleccione la ciudad">
-      <option></option>
-      <%= options_for_select(City.order('name').all.collect{|city| [city.name, city.slug] }, @city ? @city.id : nil) %>
+  
+    <select id="city-select" name="poi[category_id]" class="chosen">
+    	<%= options_for_select(City.order('name').all.collect{|city| [city.name, city.slug] }, @city ? @city.id : nil) %>
     </select>
-  </div>
 
   <div class="mbl city-select" style="width: 120px; display: inline-block; margin-left: 25px;">
-    <a id="filter-category-btn" class="button positive" href="#">filtrar</a>
+    <a id="filter-category-btn" class="button positive" href="#">Buscar</a>
   </div>
   <div class="">
   
