--- a/app/views/pois/_form.html.erb
+++ b/app/views/pois/_form.html.erb
@@ -17,40 +17,44 @@
           </div>
         </div>
         
+         <div class="clearfix">
+          <%= f.label "Categoria" %>
+          <div class="input">
+            <select id="poi_category" name="poi[category_id]" class="chosen">
+              <%= option_groups_from_collection_for_select(Supercategory.order('name').all, :categories, :name, :id, :name) %>
+            </select>
+          </div>
+        </div>
+        
         <div class="clearfix">
-        <%= f.label "Categoria" %>
-        <div class="input">
-          <select id="poi_category" name="poi[category_id]">
-            <%= option_groups_from_collection_for_select(Supercategory.order('name').all, :categories, :name, :id, :name) %>
-          </select>
-        </div>
-        <%= f.label "Localidad" %>
-        <div class="input">
-          <select id="poi_category" name="poi[city_id]">
-            <%= options_for_select(City.order('name').all.collect{|city| [city.name, city.id] }, @city ? @city.id : nil) %>
-          </select>
+          <%= f.label "Localidad" %>
+          <div class="input">
+            <select id="poi_city" name="poi[city_id]" class="chosen">
+              <%= options_for_select(City.order('name').all.collect{|city| [city.name, city.id] }, @city ? @city.id : nil) %>
+            </select>
+          </div>
         </div>
 
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address %>
-  </div>
-  <div class="field">
-    <%= f.label :telephone %><br />
-    <%= f.text_field :telephone %>
-  </div>
-  <div class="field">
-    <%= f.label :website %><br />
-    <%= f.text_field :website %>
-  </div>
-
-  <div class="field">
-    <%= f.label :timetable %><br />
-    <%= f.text_area :timetable, class: 'span6', rows: 2 %>
-  </div>
-  </div>
+			  <div class="field">
+			    <%= f.label :address %><br />
+			    <%= f.text_field :address %>
+			  </div>
+			  <div class="field">
+			    <%= f.label :telephone %><br />
+			    <%= f.text_field :telephone %>
+			  </div>
+			  <div class="field">
+			    <%= f.label :website %><br />
+			    <%= f.text_field :website %>
+			  </div>
+			
+			  <div class="field">
+			    <%= f.label :timetable %><br />
+			    <%= f.text_area :timetable, class: 'span6', rows: 2 %>
+			  </div>
+			  </div>
       
-      <div class="span6">
+      <div>
         <div class="tabs">
           <div class="tab-selector">
             <a href="#from-map" class="selected">Subir desde el Mapa</a>
@@ -69,7 +73,6 @@
             <div class="clearfix">
               <div class="input">
                 <div id="map-canvas" style="height: 450px; width: 460px; margin-left: -25px;"></div> 
-                <div id="map-canvas" style="width: 700px; height: 300px; margin: 22px 0 30px -5px;"></div>
                 <span id="route-help" class="help-block">
                   <%= t :route_help %> 
                   <a href="#" id="new-map-undo" class="pull-right danger">Deshacer</a>
