--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,15 +18,18 @@
   </p>
   <p>
 	  <b><%= model_class.human_attribute_name(:city_id) %>:</b>
-	  <%= @user.city_id %>
+	  <%= City.find_by_id(@user.city_id).name if @user.city_id %>
   </p>
   <%= render partial: 'profiles/show' %>
+
+  </div>
+
+<% if @user == current_user %> 
+  <div class="span5">
   <p>
+  	Facebook likes
   	<%= link_to "Likes", likes_path %>
   </p>
-  </div>
-  
-  <div class="span5">
 			<%= render 'pages/user_nav'%>		
 		<p>
 			<%= render 'pages/authentications'%>
@@ -68,3 +71,7 @@
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
 </div>
+
+<% else %>
+	<%# meter la actividad del usuario %>
+<% end %>
