--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,8 +22,6 @@
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
 </script>
-
-
   	
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -33,7 +31,7 @@
 							<li><% logo = image_tag("logo.png", :size => "100x200", class: "rounded-image") %>
 		  				<%= link_to logo, root_path %></li>
               
-              <li><a href="/explorer">Explorer</a></li>
+              <li><a href="/explorer/places">Explorer</a></li>
               <li><a href="/packages">Packages</a></li>
               <li><a href="/recomendations">Recomendaciones</a></li>
               <li><a href="/retrieval">Retrieval</a></li>           
