Foursquare functions created recommended and package page started

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,7 +33,7 @@
               
               <li><a href="/explorer/places">Explorer</a></li>
               <li><a href="/packages">Packages</a></li>
-              <li><a href="/recomendations">Recomendaciones</a></li>
+              <li><a href="/recommendations">Recomendaciones</a></li>
               <li><a href="/retrieval">Retrieval</a></li>           
             </ul>
             
