--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  # app/assets/stylesheets/application.css
  *= require formtastic
  # require my_formtastic_changes
- *= require bootstrap
+ *= require bootstrap.min
  *= require pois
  *= require file-uploader
  *= require authentications  
@@ -20,6 +20,8 @@
  *= require_self
  *= require jquery-ui-1.10.1.custom.min
  *= require chosen
+ *= require recommendation
+ *= require formtastic-bootstrap
  */
 
 img[src*="gstatic.com/"], img[src*="googleapis.com/"]  {
