--- a/app/views/recommendation/index.html.erb
+++ b/app/views/recommendation/index.html.erb
@@ -1,33 +1,11 @@
-<!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-      	<div class="row">
-      		<div class="span5">
-      			
-    			</div>		
-    			<% if user_signed_in? %>
-    				<%= button_to "Sign out", destroy_user_session_path, class: "btn btn-primary btn-large", method: "get" %>
- 					<% else %>
-    				<div class="span2">
-    				<%= button_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-large", method: "get" %>
-    				</div>
-    				<div class="span1">
-    				<%= button_to "Sign in", new_user_session_path, class: "btn btn-inverse btn-large", method: "get"%>
-    				</div>
- 					<% end %>
- 					</div>
-				
-					<br />
-            <%= link_to t('cities'), cities_path, class: "btn-link" %>
-        		<div class="span2">
-              <%= t 'routes' %>
-            </div>
-            <div class="span2">
-              <%= t 'packages' %>
-            </div>
-            <div class="span2">
-              <%= t 'resources' %>
-            </div> 
-            <div class="span3">
-              <%= t 'to_do' %>
-						</div>
-         </div>
+<h2>Recomendaciones personalizadas para ti</h2>
+
+<h4>Lugares</h4>
+
+<ul class="recommended-list">
+	<%= render @recommended_pois, partial: "poi_recommend", as: :poi %>
+</ul>	
+
+<h4>Actividades</h4>
+
+<h4>Paquetes Personalizados</h4>
