Events explorer working, fancybox fixed nd other fixes.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  *= require bootstrap.min
  *= require pois
  *= require file-uploader
+ *= require fancybox
  *= require authentications  
  *= require categories
  *= require_self
