--- a/app/views/explorer/events.html.erb
+++ b/app/views/explorer/events.html.erb
@@ -5,14 +5,14 @@
 <div class="pois-explorer">
 	<div class="scroll-pane">
 
-			<div id="mainDiv"  style="width: 960px;">
+			<div id="mainDiv">
 				<br />
 				<img src="http://www.kulturklik.euskadi.net/wp-content/uploads/2010/02/kulturklik.png" />
 				<br />
 				<br />
 				<table>
 					<tr>
-						<td  style="background-color: #000000; color:#fff">
+						<td >
 						<br />
 						<br />
 						<input id="langRadioEu" type="radio" name="langRadio" value="eu" onclick="LangChanged()" />
