--- a/app/views/pois/index.html.erb
+++ b/app/views/pois/index.html.erb
@@ -12,7 +12,7 @@
         </div><!-- /.span4 -->
         <div class="span4">
           <%= pois_logo = image_tag("pois.jpg", size: "200x140", class: "img-circle") %>
-          <h2><%= t 'places' %></h2>
+          <h2><%= t 'places_share' %></h2>
      			<p><%= t 'places_msg' %></p>
      			<p><a href="/que-hacer/" class="btn"><%= t 'read_more' %></a></p>
         </div><!-- /.span4 -->
@@ -20,7 +20,7 @@
           <%= pois_logo = image_tag("tourist_packages.jpg", size: "200x140", class: "img-circle") %>
           <h2><%= t 'packages_social' %></h2>
 			    <p><%= t 'packages_social_msg' %></p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <p><a href="/packages/" class="btn"><%= t 'read_more' %></a></p>
         </div><!-- /.span4 -->
       </div><!-- /.row -->
 
