--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,8 @@
 <div class="navcontainer">
     	<% if user_signed_in? %>
 				<p>Signed in as <%= current_user.email %></p>
+			<% else %>
+				<p><%= link_to t(:sign_up_provider), new_provider_registration_path, class: "btn-link" %></p>
 			<% end %>
       <p><%= link_to "About", about_path, class: "btn-link" %></p>
       <p><%= link_to "Contact", contact_path, class: "btn-link"  %></p>
