--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,18 +51,18 @@
 		        	
 		        	<% if user_signed_in? %>
 		        	<div class="pull-right">		        		
-		          	Logged as <%= link_to current_user.name.blank? ? "Introduce nombre" : "#{current_user.name}", current_user %>&nbsp; 
-		          	<%= link_to "Sign Out", destroy_user_session_path %>&nbsp;&nbsp;		          	
+		          	<%= link_to current_user.name.blank? ? "Introduce nombre" : "#{current_user.name}", current_user %>&nbsp;&nbsp; 
+		          	<%= link_to "Sign Out", destroy_user_session_path %>&nbsp;&nbsp;&nbsp;&nbsp;		          	
 		          </div>
 		          <% else %>
 		          
 		          	<ul class="nav pull-right span2">              		
 	              		<li class="dropdown">
-	                	<a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
+	                	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><Sign in><%= t :sign_in %> <b class="caret"></b></a>
 	                	<ul class="dropdown-menu">
 		                  <%= render 'users/sessions/login'%>
 		                  <li class="divider"></li>
-		                  <li><a> <%= link_to "Registrate", new_registration_path(resource_name) %></a> </li>
+		                  <li><a> <%= link_to t(:sign_up), new_user_registration_path %></a> </li>
 		                  <li class="divider"></li>
 		                  <li class="nav-header"><Nav header><%= t('authentications')%></li>
 		                  <li><a href="/auth/twitter">Twitter <%= image_tag "twitter_64.png",:size => "30x30",  :alt => "Twitter" %></a></li>
