listes created and example packages

--- a/app/views/explorer/_poi_explorer.html.erb
+++ b/app/views/explorer/_poi_explorer.html.erb
@@ -38,6 +38,8 @@
     </div>
     <% @counter += 1 %>
   </div>
+  <br />
+  <%= button_to "Añadir a To do List", explorer_places_path, class: "btn btn-info" %>
   </div>
 </li>
 
