--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -196,6 +196,8 @@
       </div>
     <% end %>
     
+    <%= button_to "Añadir a To do List", poi_path(@poi), class: "btn btn-info" %>
+    
     <div id="share-poi" class="column-section">
       <h4>Compartelo</h4>
       <div id="share-poi-facebook">
