--- a/app/views/providers/registrations/new.html.erb
+++ b/app/views/providers/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<h2>Resgistrate como proveedor</h2>
+<b>Ofrece tus servicios, paquetes turísticos, actividades... y permite a los usuarios acceder a ellos</b>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
