--- a/app/views/retrieval/_poi_retrieval.html.erb
+++ b/app/views/retrieval/_poi_retrieval.html.erb
@@ -1,10 +1,13 @@
 <li class="grey-box">
+	<div class="span3">
   <div class="poi-img">
     <%= image_tag poi.photos.first.image.url(:thumb_wide), class: 'event-preview' if poi.photos.count > 0 %>
   </div>
+  </div>
+
   <div class="event-content">
     <h4><%= link_to poi.localized_name(session[:locale]), poi_url(poi) %></h4>
-    
+    <%= button_to "Añadir a To do List", poi_path(poi), class: "btn btn-info" %>
     <div class="poi-rating">
       <div class="starbar-static">
         <% rating = poi.ratings_count ? (poi.rating / poi.ratings_count) : 0 %>
@@ -18,6 +21,7 @@
       <%= image_tag poi.supercategory.icon.url(:small), class: 'poi-list-type' if poi.supercategory && poi.supercategory.icon %>
     </div>
     
+    <br />
     <div class="event-desc">
       <% if !poi.description.blank? %>
       	<p><%= truncate poi.description, length: 220 %></p>
@@ -26,5 +30,6 @@
       <% end %>
       <time><%= time_tag poi.created_at %></time>
     </div>
+
   </div>
 </li>
