--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -63,6 +63,7 @@
 	      <%= p.input :other, label: t('other'), as: :range, in: 0..10, step: 1 %>
 	      <%= p.input :buildings, label: t('buildings'), as: :range, in: 0..10, step: 1 %>
 	      <%= p.input :friends, label: t('friends'), as: :range, in: 0..10, step: 1 %>
+	      <%= p.input :events, label: t('eventos'), as: :range, in: 0..10, step: 1 %>
 	      
 			<% end %>
     <% end %>
