Some fixes facebook login doesnt work

--- a/app/views/packages/_form.html.erb
+++ b/app/views/packages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@package) do |f| %>
+<%= simple_form_for(@package) do |f| %>
   <% if @package.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@package.errors.count, "error") %> prohibited this package from being saved:</h2>
@@ -15,6 +15,18 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+  
+  <%= javascript_include_tag "packages-new" %>
+  
+  <%= f.label 'Lugares' %>
+	<div id="package">
+	<%= f.simple_fields_for :package_pois do |poi| %>
+		<%= render 'package_poi_fields', :f => poi %>
+		<br />	 		
+	<% end %>
+	<%= link_to_add_association 'Añadir lugar', f, :package_pois %>
+	</div>
+			
   <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
