--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -38,7 +38,7 @@
   font-size: 18px;
   line-height: 12px;
   padding: 4px 8px;
-  background: #F24F00;
+  background: #cf0818;
   margin-right: 4px;
 }
 
