--- a/app/views/pois/_poi.html.erb
+++ b/app/views/pois/_poi.html.erb
@@ -2,7 +2,7 @@
 <li class="poi-preview" data-poi-id="<%= poi.id %>" data-poi-lat="<%= poi.latitude %>" data-poi-lng="<%= poi.longitude %>" data-poi-name="<%= poi.name %>" data-poi-slug="<%= poi.slug %>">
   <div class="poi-img thumbnail">
     <%= link_to poi_url(poi) do %>
-      <%= image_tag poi.photos.count > 0 ? poi.photos.first.image.url(:thumb_wide) : '/assets/poi-placeholder.jpg', class: 'poi-preview' %>
+      <%= image_tag poi.photos.count > 0 ? poi.photos.first.image.url(:thumb_wide) : '/assets/poi-placeholder.png', class: 'poi-preview' %>
     <% end %>
   </div>
   <div class="pois-content">
